--- a/client/src/app/page.module.css
+++ b/client/src/app/page.module.css
@@ -2,6 +2,7 @@
   margin-top:30px;
 }
 
+/* logo */
 .logo{
   margin-right:200px;
 }
@@ -13,7 +14,10 @@
   border-radius: 50%;
   border: 2px solid #45b26b;
   margin-top:-10px;
+  margin-left:30px;
 }
+
+/* nav bar */
 .nav{
   font-size: 18px;
   font-weight: bold;
@@ -21,7 +25,7 @@
 }
 
 .menu{
-  width:30px;
+  width:40px;
   height: 30px;
   
   position: fixed;
@@ -30,6 +34,7 @@
 .menuContainer{
 }
 
+/* home page container */
 .homeMessage{
   display: flex;
   justify-content: center;
@@ -51,6 +56,8 @@
   width: 90%;
 }
 
+
+/* login button */
 .loginButton{
   font-size: 15;
   font-weight: bold;
@@ -59,4 +66,16 @@
   color:white;
 
   width: 100px;
+}
+
+.loginButton:hover{
+  font-size: 15 ;
+  font-weight: bold;
+
+  background-color: #1BA1E2 !important;
+  color:white !important;
+
+  width: 100px;
+
+  padding:3px !important;
 }
