--- a/client/src/app/page.module.css
+++ b/client/src/app/page.module.css
@@ -35,8 +35,6 @@
   position: fixed;
   right:50px;
 }
-.menuContainer{
-}
 
 /* home page container */
 .homeMessage{
@@ -59,6 +57,7 @@
   margin-top: 100px;
   height: 90%;
   width: 90%;
+  color:#cfdddd
 }
 
 
@@ -71,6 +70,7 @@
   color:white;
 
   width: 100px;
+  
 }
 
 .loginButton:hover{
